# analytic-web-organiser

./: .env_example  .gitignore  README.md  config.py  db_diagram.drawio  main.py  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  common.py  models.py  settings.cfg
app/static/css/: style.css
app/static/js/: script.js
app/templates/: base.html  group.html  index.html  login.html  profile.html  shared.html  signup.html
data_collector/: README.md  main.py  pyproject.toml
migrations/versions/: 1ce0b65fd713_cascade_delete.py  3f53be8325af_add_field_for_group.py  cc49f27f27ab_initial_migration.py
