[tool.poetry]
name = "parser_for_posts_from_habr"
version = "0.1.0"
description = ""
authors = ["keshe4ka <artem.anaschenko@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests-html = "^0.10.0"
beautifulsoup4 = "^4.10.0"
ratelim = "^0.1.6"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
